--- a/Project Prototype/src/application/RecipeList.fxml
+++ b/Project Prototype/src/application/RecipeList.fxml
@@ -12,9 +12,10 @@
          <children>
             <Button layoutX="358.0" layoutY="16.0" mnemonicParsing="false" onAction="#changeToMenu" text="Return to Menu" />
             <ListView fx:id="cocktailRecipeList" layoutX="23.0" layoutY="67.0" prefHeight="341.0" prefWidth="385.0" />
-            <Button fx:id="viewButton" layoutX="189.0" layoutY="12.0" mnemonicParsing="false" onAction="#viewRecipe" prefHeight="33.0" prefWidth="52.0" text="View" />
-            <Button fx:id="deleteButton" layoutX="255.0" layoutY="12.0" mnemonicParsing="false" onAction="#deleteRecipe" prefHeight="33.0" prefWidth="52.0" text="Delete" />
+            <Button fx:id="viewButton" layoutX="417.0" layoutY="67.0" mnemonicParsing="false" onAction="#viewRecipe" prefHeight="33.0" prefWidth="52.0" text="View" />
+            <Button fx:id="deleteButton" layoutX="417.0" layoutY="122.0" mnemonicParsing="false" onAction="#deleteRecipe" prefHeight="33.0" prefWidth="52.0" text="Delete" />
             <TextField fx:id="searchName" layoutX="23.0" layoutY="16.0" promptText="Search:" />
+            <Button fx:id="searchButton" layoutX="186.0" layoutY="16.0" mnemonicParsing="false" onAction="#searchRecipe" text="Search" />
          </children>
       </AnchorPane>
    </children>
