--- a/Project Prototype/src/application/MainMenu.fxml
+++ b/Project Prototype/src/application/MainMenu.fxml
@@ -15,8 +15,8 @@
                   <Font size="27.0" />
                </font>
             </Text>
-            <Button fx:id="toCreate" layoutX="26.0" layoutY="69.0" mnemonicParsing="false" onAction="#changeToCreate" prefHeight="75.0" prefWidth="113.0" text="Create" />
-            <Button fx:id="toRecipeList" layoutX="207.0" layoutY="69.0" mnemonicParsing="false" onAction="#changeToList" prefHeight="75.0" prefWidth="113.0" text="Recipe List" />
+            <Button fx:id="toCreate" layoutX="26.0" layoutY="53.0" mnemonicParsing="false" onAction="#changeToCreate" prefHeight="109.0" prefWidth="113.0" />
+            <Button fx:id="toRecipeList" layoutX="206.0" layoutY="53.0" mnemonicParsing="false" onAction="#changeToList" prefHeight="109.0" prefWidth="113.0" />
             <Button fx:id="exit" layoutX="273.0" layoutY="13.0" mnemonicParsing="false" onAction="#handleCloseButtonAction" prefHeight="3.0" prefWidth="56.0" text="Exit" />
          </children>
       </AnchorPane>
