--- a/Project Prototype/src/application/application.css
+++ b/Project Prototype/src/application/application.css
@@ -2,14 +2,18 @@
 #toCreate{
 	-fx-background-image:url("createclear.png");
 	-fx-background-size: 100%, 100%;
-}
+	-fx-background-color:transparent                    /*transparent background here */
+} 
+
 #toRecipeList{
 	-fx-background-image:url("list1.png");
 	-fx-background-size: stretch;
+	-fx-background-color: transparent		    /*transparent background here */
 }
 #toMainMenu{
 	-fx-background-image:url("exit1.png");
 	-fx-background-size: stretch;
+	-fx-background-color: white			    /*white background here */
 }
 #addButton{
 	-fx-background-image:url("ADD1.jpg");
@@ -26,4 +30,5 @@
 #viewButton{
 	-fx-background-image:url("list1.png");
 	-fx-background-size: stretch;
+	-fx-background-color: white			   /*white background here */
 }
