--- a/Project Prototype/src/application/application.css
+++ b/Project Prototype/src/application/application.css
@@ -1,14 +1,14 @@
 /* JavaFX CSS - Leave this comment until you have at least create one rule which uses -fx-Property */
 #toCreate{
-	-fx-background-image:url("createclear.png");
+	-fx-background-image:url("create.jpg");
 	-fx-background-size: 100%, 100%;
 }
 #toRecipeList{
-	-fx-background-image:url("list1.png");
+	-fx-background-image:url("list1.jpg");
 	-fx-background-size: stretch;
 }
 #toMainMenu{
-	-fx-background-image:url("exit1.png");
+	-fx-background-image:url("exit1.jpg");
 	-fx-background-size: stretch;
 }
 #addButton{
@@ -24,6 +24,6 @@
 	-fx-background-size: stretch;
 }
 #viewButton{
-	-fx-background-image:url("list1.png");
+	-fx-background-image:url("list1.jpg");
 	-fx-background-size: stretch;
 }
