--- a/Project Prototype/src/application/ViewRecipe.fxml
+++ b/Project Prototype/src/application/ViewRecipe.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane prefHeight="202.0" prefWidth="353.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.userController">
    <children>
-      <AnchorPane layoutY="6.0" prefHeight="326.0" prefWidth="548.0">
+      <AnchorPane layoutY="6.0" prefHeight="370.0" prefWidth="548.0">
          <children>
             <TextArea fx:id="recipeArea" editable="false" layoutX="16.0" layoutY="35.0" prefHeight="251.0" prefWidth="518.0">
                <font>
@@ -24,7 +24,7 @@
                </font>
             </Label>
             <Button layoutX="405.0" layoutY="2.0" mnemonicParsing="false" onAction="#returnToList" prefHeight="25.0" prefWidth="129.0" text="Return to Recipe List" />
-            <Button fx:id="editButton" layoutX="462.0" layoutY="295.0" mnemonicParsing="false" onAction="#updateRecipe" prefHeight="25.0" prefWidth="72.0" text="Edit" />
+            <Button fx:id="editButton" layoutX="462.0" layoutY="295.0" mnemonicParsing="false" onAction="#updateRecipe" prefHeight="68.0" prefWidth="72.0" />
          </children>
       </AnchorPane>
    </children>
